--- a/.github/workflows/stat.yml
+++ b/.github/workflows/stat.yml
@@ -15,16 +15,16 @@ jobs:
           
       - name: get views    
         run: |
-            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_TRY }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/views -o views.json 
+            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_VIEWS }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/views -o views.json 
       - name: get clones
         run: |
-            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_TRY}}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/clones -o clones.json 
+            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_VIEWS}}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/clones -o clones.json 
       - name: get referrals
         run: |
-            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_TRY }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/popular/referrers -o referrers.json 
+            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_VIEWS }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/popular/referrers -o referrers.json 
       - name: get paths
         run: |
-            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_TRY }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/popular/paths -o paths.json 
+            curl -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.VAYESTA_VIEWS }}" --request GET https://api.github.com/repos/BoothGroup/Vayesta/traffic/popular/paths -o paths.json 
      
       - name: Generate artifact name
         id: generate-name
@@ -65,5 +65,5 @@ jobs:
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add *.zip
           git commit -m "Add new bi-weekly stats" -a
-          git remote set-url origin https://alejandrosantanabonilla:${{ secrets.VAYESTA_TRY }}@github.com/alejandrosantanabonilla/Vayesta.git
+          git remote set-url origin https://alejandrosantanabonilla:${{ secrets.VAYESTA_VIEWS }}@github.com/alejandrosantanabonilla/Vayesta.git
           git push 
