--- a/.github/workflows/stat.yml
+++ b/.github/workflows/stat.yml
@@ -4,9 +4,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     
-  schedule:
-    - cron: '50 10 14  * *'
-    - cron: '1 0 30 * *'
+#  schedule:
+#    - cron: '50 10 14  * *'
+#    - cron: '1 0 30 * *'
     
 jobs:
   test-curl-action:
