--- a/.github/workflows/stat.yml
+++ b/.github/workflows/stat.yml
@@ -57,10 +57,10 @@ jobs:
       - name: Staging the artifacts into a folder
         run: |
              mkdir data_1
-             mv *.zip analysis_tools/ data_1/
+             mv *.zip data_1/
              cd data_1
              git clone -b stats https://github.com/alejandrosantanabonilla/Vayesta
-             mv *.zip analysis_tools Vayesta/statistics
+             mv *.zip Vayesta/statistics
              
       - name: Commit files
         run: |
